Cambio de texto

--- a/index.html
+++ b/index.html
@@ -18,18 +18,9 @@
         <div class="sobre" id="sobre">
             <div class="tapa"></div>
             <div class="carta">
-                <p>Angy, hoy escribo esto no para declarar ni para proponer algo, hoy escribo esto para expresarme. Eres
-                    una mujer increible en todos los sentidos para mi, aun con todos tus defectos, te acepto tal como
-                    eres y abrazo tus valores, eres alguien inefable para mi. </p>
-                <p>Yo creo, que si alguien quiere estar con una persona que es un 1000, debe tambien ser un 1000, y yo
-                    acepto que si quiero al menos estar a tu lado, debo de cambiar y ser alguien confiable, alguien que
-                    sea capaz de quererte. <br><br>Yo se muy bien los problemas de idealizar a las personas, es por eso
-                    que
-                    no
-                    te quiero ver como alguien inalcanzable, sino como alguien con quien puedo pararme a su lado.</p>
-                <p>No te pido nada, tu eres para mi increible, esta carta es un simple desahogo mio, un grito de guerra,
-                    un comienzo bien hecho. Aun si tu no quieres nada, yo quiero estar feliz con haber dado todo de mi
-                    por alguien que amo.</p>
+                <p>Texto</p>
+                <p>Texto</p>
+                <p>Texto</p>
             </div>
         </div>
     </div>
